# Cxx-Bidirectional-Coroutines

./: .gitmodules  CMakeLists.txt  README.md  main.cpp
BoostCallCCTests/: main.cpp
BoostCallCCTests.xcodeproj/: project.pbxproj
BoostCallCCTests.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
BoostCallCCTests.xcodeproj/xcuserdata/thomas.xcuserdatad/xcschemes/: xcschememanagement.plist
example/: CMakeLists.txt  main.cpp
include/: BidirectionalCoroutine.hpp
include/coroutine/: BidirectionalCoroutine.hpp  nullary-coroutine-stream.hpp
include/cxx-bidirectional-coroutines/: bidirectional-coroutine.hpp  nullary-coroutine-stream.hpp
